--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -23,7 +23,7 @@
 
     <title>Shoping-Cart</title>
 
-    <link rel="icon" href="/images/images.png" type="image/icon type">
+    <link rel="icon" href="/images/images.jpg" type="image/icon type">
 
 </head>
 
