--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -52,10 +52,10 @@
                         <img style="width: 22px; height: 22px;" src="https://img.icons8.com/ios/50/000000/import.png" />
                         Login
                     </a>
-                    <a class="dropdown-item" href="/admin/admin-signup">
+                    {{!-- <a class="dropdown-item" href="/admin/admin-signup">
                         <img style="width: 22px; height: 22px;"
                             src="https://img.icons8.com/ios/50/000000/add-administrator.png" /> Create Account
-                    </a>
+                    </a> --}}
                     {{/if}}
                 </div>
             </div>
